// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions in Additional Fields add field 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/ADD_ADDITIONAL_FIELD",
}
`;

exports[`Actions in Additional Fields append field value 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
    "value": "Chocolate",
  },
  "type": "@@MT/EVENTS-PRO/APPEND_ADDITIONAL_FIELD_VALUE",
}
`;

exports[`Actions in Additional Fields initial state 1`] = `
Object {
  "payload": Object {
    "dividerEnd": " & ",
    "dividerList": ", ",
    "isPristine": true,
    "label": "",
    "metaKey": "",
    "options": Array [],
    "output": "",
    "type": "",
    "value": "",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_INITIAL_STATE",
}
`;

exports[`Actions in Additional Fields meta key 1`] = `
Object {
  "payload": Object {
    "metaKey": "_tribe_events",
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_META_KEY",
}
`;

exports[`Actions in Additional Fields on change 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_CHANGE",
}
`;

exports[`Actions in Additional Fields remove field 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/REMOVE_ADDITIONAL_FIELD",
}
`;

exports[`Actions in Additional Fields remove field value 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
    "value": "Chocolate",
  },
  "type": "@@MT/EVENTS-PRO/REMOVE_ADDITIONAL_FIELD_VALUE",
}
`;

exports[`Actions in Additional Fields set field blur 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_BLUR",
}
`;

exports[`Actions in Additional Fields set field blur with type type 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_BLUR/text",
}
`;

exports[`Actions in Additional Fields set field blur with type type 2`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_BLUR/checkbox",
}
`;

exports[`Actions in Additional Fields set field blur with type type 3`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_BLUR/radio",
}
`;

exports[`Actions in Additional Fields set field blur with type type 4`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_BLUR/dropdown",
}
`;

exports[`Actions in Additional Fields set field blur with type type 5`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_BLUR/textarea",
}
`;

exports[`Actions in Additional Fields set field blur with type type 6`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_BLUR/url",
}
`;

exports[`Actions in Additional Fields set field divider end 1`] = `
Object {
  "payload": Object {
    "dividerEnd": " & ",
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_DIVIDER_END",
}
`;

exports[`Actions in Additional Fields set field is pristine 1`] = `
Object {
  "payload": Object {
    "isPristine": true,
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_IS_PRISTINE",
}
`;

exports[`Actions in Additional Fields set field is pristine 2`] = `
Object {
  "payload": Object {
    "isPristine": false,
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_IS_PRISTINE",
}
`;

exports[`Actions in Additional Fields set field list divider 1`] = `
Object {
  "payload": Object {
    "dividerList": ", ",
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_DIVIDER_LIST",
}
`;

exports[`Actions in Additional Fields set field name 1`] = `
Object {
  "payload": Object {
    "label": "Host",
    "name": "_ecp_custom_23",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_LABEL",
}
`;

exports[`Actions in Additional Fields set field options 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
    "options": Array [
      "Option 1",
      "Option 2 ",
    ],
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_OPTIONS",
}
`;

exports[`Actions in Additional Fields set field output 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
    "output": "Label on my field",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_OUTPUT",
}
`;

exports[`Actions in Additional Fields set field type 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
    "type": "checkbox",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_TYPE",
}
`;

exports[`Actions in Additional Fields set field value 1`] = `
Object {
  "payload": Object {
    "name": "_ecp_custom_23",
    "value": "Rachel MA",
  },
  "type": "@@MT/EVENTS-PRO/SET_ADDITIONAL_FIELD_VALUE",
}
`;
